# maelstRom

./: .Rhistory  ClusterRes.RData  ClusterRes_All.RData  DESCRIPTION  License  NAMESPACE  README.Rmd  README.md  _pkgdown.yml  configure  configure.ac
.Rproj.user/67A8F655/: cpp-compilation-config  cpp-definition-cache  persistent-state  rmd-outputs
R/: AD_correlator.R  AdvancedFitter.R  AdvancedPvalcomb.R  AllelicMeta_est.R  AllelicMeta_est_par.R  BetaBinomGenotyping.R  BetaBinomMix_LLDeriv.R  BetaBinomMix_LLDeriv_transfo.R  BetaBinom_test_pvalTS.R  EMfit_betabinom.R  EMfit_betabinom_SEslack.R  EMfit_betabinom_popcomb.R  EMfit_betabinom_robust.R  EMfit_binom.R  GOF_uniform.R  HWE_chisquared.R  LOI_calling.R  LOItest_logreg.R  LikelyDistsHet.R  LogTrapezoidalInt.R  MAGE.R  MAGE_EMfitplot.R  MAGE_imprintplot.R  MomentEst_MixedBetaBinom.R  MomentEst_MixedBetaBinom_SESlack.R  RcppExports.R  TumPurHelpFun_Final.R  TumPur_LogLik_CPPs.R  TumPur_LogLik_Final.R  TumPur_LogLik_FinalCPP.R  combine_p_gene.R  dAD_analysis.R  dpqrBetaBinom.R  final_filter.R  grad_pi.R  grad_theta.R  import_packages.R  impr_LOI_analysis.R  imprinting_est.R  logSums_MaxMethod.R  (+14 more)
autom4te.cache/: output.0  requests  traces.0  traces.1
data/: MAGE.RData  NumIntTables.RData  maelstRom.RData
docs/: 404.html  LICENSE-text.html  MAGE_tutorial.html  authors.html  index.html  pkgdown.yml  search.json  sitemap.xml
docs/articles/: MAGE_expanded_tutorial.html  MAGE_tutorial.html  index.html  maelstRom_Allelic_Dispersion_tutorial.html  maelstRom_imprinting_tutorial.html  maelstRom_results_exploration.html
docs/reference/: AD_correlator.html  AdvancedFitter.html  (+103 more)
inst/: REFERENCES.bib
man/: AD_correlator.Rd  AdvancedFitter.Rd  AdvancedPvalcomb.Rd  AllelicMeta_est.Rd  AllelicMeta_est_par.Rd  BetaBinomGenotyping.Rd  BetaBinomMix_LLDeriv.Rd  BetaBinomMix_LLDeriv_transfo.Rd  BetaBinom_test_pvalTS.Rd  BrolDB.Rd  CppCnT_Optim.Rd  CppHetH0_Optim.Rd  CppHet_Optim.Rd  CppHom_Optim.Rd  EMfit_betabinom.Rd  EMfit_betabinom_SEslack.Rd  EMfit_betabinom_popcomb.Rd  EMfit_betabinom_robust.Rd  EMfit_binom.Rd  GOF_uniform.Rd  GradPiPi_cppi.Rd  GradPiPi_cppi_MP.Rd  GradPiTheta_cppi.Rd  GradPiTheta_cppi_MP.Rd  GradPi_cppi.Rd  GradPi_cppi_MP.Rd  GradThetaTheta_cppi.Rd  GradThetaTheta_cppi_MP.Rd  GradTheta_cppi.Rd  GradTheta_cppi_MP.Rd  HWE_chisquared.Rd  LOI_calling.Rd  LOItest_logreg.Rd  LikelyDistsHet.Rd  LogGaussianQuad_CPP.Rd  LogNewtonCotes_CPP.Rd  LogTanhSinhQuad_CPP.Rd  LogTrapezoidalInt_CPP.Rd  MAGE-package.Rd  MAGE.Rd  (+62 more)
src/: Makevars.in  Makevars.win  OptTest.cpp  OptTestX.cpp  RcppExports.cpp  TumPurFuns.cpp
src-i386/: BetaBinomFuns.cpp  RcppExports.cpp
vignettes/: MAGE_expanded_tutorial.Rmd  MAGE_tutorial.Rmd  REFERENCES.bib  maelstRom_Allelic_Dispersion_tutorial.Rmd  maelstRom_imprinting_tutorial.Rmd  maelstRom_results_exploration.Rmd
(+322 files in other folders)
